--- a/app/src/main/res/layout/activity_text.xml
+++ b/app/src/main/res/layout/activity_text.xml
@@ -10,6 +10,8 @@
         android:layout_width="413dp"
         android:layout_height="488dp"
         android:text="TextView"
+        android:background="@drawable/round_button"
+        android:fontFamily="@font/skybori"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -24,6 +26,8 @@
         android:layout_marginStart="48dp"
         android:layout_marginTop="546dp"
         android:text="Button"
+        android:background="@drawable/round_button"
+        android:fontFamily="@font/skybori"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView"
@@ -35,6 +39,8 @@
         android:layout_height="59dp"
         android:layout_marginTop="58dp"
         android:text="Button"
+        android:background="@drawable/round_button"
+        android:fontFamily="@font/skybori"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.649"
