서버에서 생성된 JSON 파일을 불러오기 버튼을 통해 값을 가져옴

--- a/app/src/main/res/layout/activity_img.xml
+++ b/app/src/main/res/layout/activity_img.xml
@@ -68,5 +68,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/galleryBtn" />
 
+    <Button
+        android:id="@+id/resultBtn"
+        android:layout_width="114dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center"
+        android:background="@drawable/round_button"
+        android:fontFamily="@font/skybori"
+        android:text="결과보기"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.053"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.696" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
