--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
         android:id="@+id/imgBtn"
         android:layout_width="95dp"
         android:layout_height="38dp"
-        android:layout_marginTop="131dp"
+        android:layout_marginTop="150dp"
         android:background="@drawable/round_button"
         android:fontFamily="@font/skybori"
         android:textSize="20sp"
@@ -45,7 +45,7 @@
         android:layout_width="95dp"
         android:layout_height="37dp"
         android:layout_marginStart="119dp"
-        android:layout_marginTop="131dp"
+        android:layout_marginTop="150dp"
         android:background="@drawable/round_button"
         android:fontFamily="@font/skybori"
         android:textSize="20sp"
@@ -67,7 +67,16 @@
         app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
 
-
+    <EditText
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:id="@+id/contextEditText"
+        app:layout_constraintTop_toBottomOf="@+id/diaryTextView" android:layout_marginTop="16dp"
+        android:hint="내용을 입력하세요." android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginRight="8dp" android:layout_marginStart="8dp"
+        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+        android:visibility="invisible"/>
 
 
 
