--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -18,13 +18,28 @@
         app:layout_constraintStart_toStartOf="@+id/booksTextView"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/bookImageView"
+        android:layout_width="156dp"
+        android:layout_height="286dp"
+        android:layout_marginTop="1dp"
+        app:layout_constraintBottom_toTopOf="@id/booksTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
     <TextView
         android:id="@+id/booksTextView"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:divider="@android:color/darker_gray"
-        android:dividerHeight="1dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/include" />
+        android:layout_marginTop="1dp"
+        android:fontFamily="@font/skybori"
+        android:autoLink="web"
+        android:lineSpacingExtra="2dp"
+        android:padding="5dp"
+        android:textSize="18sp"
+        app:layout_constraintTop_toBottomOf="@id/bookImageView"
+        tools:layout_editor_absoluteX="0dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
