--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-    <include layout="@layout/bottom_navigation_layout" />
-    <FrameLayout
-        android:id="@+id/mainFrameLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 
+    <include
+        android:id="@+id/include3"
+        layout="@layout/bottom_navigation_layout"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="68dp" />
+
+    <Button
+        android:id="@+id/imgBtn"
+        android:layout_width="143dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="132dp"
+        android:background="@drawable/round_button"
+        android:fontFamily="@font/skybori"
+        android:text="일기 사진 등록"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/calendarView" />
 
     <CalendarView
         android:id="@+id/calendarView"
@@ -22,62 +36,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.106" />
-
-
-    <Button
-        android:id="@+id/imgBtn"
-        android:layout_width="95dp"
-        android:layout_height="38dp"
-        android:layout_marginTop="150dp"
-        android:background="@drawable/round_button"
-        android:fontFamily="@font/skybori"
-        android:textSize="20sp"
-        android:text="일기 사진"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/textBtn"
-        app:layout_constraintHorizontal_bias="0.79"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/calendarView"
-        app:layout_constraintVertical_bias="0.004" />
-
-    <Button
-        android:id="@+id/textBtn"
-        android:layout_width="95dp"
-        android:layout_height="37dp"
-        android:layout_marginStart="119dp"
-        android:layout_marginTop="150dp"
-        android:background="@drawable/round_button"
-        android:fontFamily="@font/skybori"
-        android:textSize="20sp"
-        android:text="수기 입력"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imgBtn"
-        app:layout_constraintTop_toBottomOf="@+id/calendarView"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <TextView
-        android:id="@+id/diaryTextView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:gravity= "center"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/calendarView" app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
-        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
-
-    <EditText
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:id="@+id/contextEditText"
-        app:layout_constraintTop_toBottomOf="@+id/diaryTextView" android:layout_marginTop="16dp"
-        android:hint="내용을 입력하세요." android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginRight="8dp" android:layout_marginStart="8dp"
-        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-        android:visibility="invisible"/>
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
