--- a/app/src/main/res/layout/file_name_item.xml
+++ b/app/src/main/res/layout/file_name_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp">
+    android:padding="10dp">
 
 
     <LinearLayout
@@ -10,19 +10,27 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_marginStart="16dp"
-        android:orientation="vertical">
+        android:padding="15dp"
+        android:background="@drawable/item_border"
+        android:orientation="vertical"
+        >
 
         <TextView
             android:id="@+id/fileNameTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
+            android:fontFamily="@font/skybori"
+            android:textSize="20sp"
+            android:textStyle="bold"
             android:text="File Name" />
 
         <TextView
             android:id="@+id/fileInfoTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/skybori"
+            android:textSize="16sp"
+            android:textStyle="bold"
             android:text="Additional Info" />
 
     </LinearLayout>
